<resources>
    <string name="app_name">Freefinder</string>

    <string name="server_error">Error: Cannot connect to server!</string>

    <!-- Three dot menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_categories">Categories</string>
    <string name="search_maps">Search</string>
    <string name="search_hint">Search by category</string>

    <!-- Shared Preferences identifiers -->
    <string name="settings_access_token">accessToken</string>
    <string name="category_update_timestamp">categoryUpdateTimestamp</string>

    <!-- Login activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_registration_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_mismatch">Confirmed password is different</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Sign up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_refresh">Refresh</string>
    <string name="title_category_list">Categories</string>
    <string name="title_category_detail">Category Detail</string>
    <string name="title_activity_category_detail">Category Details</string>

    <!-- Add new category -->
    <string name="title_activity_add_category">Add New Category</string>
    <string name="category_name_hint">Name</string>
    <string name="add_category_button_text">Add Category</string>

    <!-- Add new place -->
    <string name="title_activity_add_place">Add New Place</string>
    <string name="basic_info_tab_text">Basic</string>
    <string name="additional_info_tab_text">Additional info</string>
    <string name="place_name_hint">Name</string>
    <string name="place_category_hint">Category</string>
    <string name="title_activity_place_detail">Place Details</string>
    <string name="like_button">Like</string>
    <string name="dislike_button">Dislike</string>
    <string name="report_button">Report</string>
    <string name="add_place_button_text">Add Place</string>
    <string name="title_activity_revision">Submit a revision</string>
    <string name="place_description_hint">Description</string>

    <!-- Categories view -->
    <string name="title_activity_categories">Categories</string>

    <!-- Category detail view -->
    <string name="parent_category_label">Parent Category</string>
    <string name="category_name_label">Name</string>
    <string name="none">None</string>
    <string name="additional_fields_label">Additional Fields</string>
    <string name="table_name_column">Name</string>
    <string name="table_type_column">Type</string>

    <!-- Place detail view -->
    <string name="place_name_label">Name</string>
    <string name="place_description_label">Description</string>
    <string name="place_category_name_label">Category</string>

    <!-- Add revision form -->
    <string name="category_revision_submit_text">Submit Category Revision</string>
    <string name="place_revision_submit_text">Submit Place Revision</string>

    <!-- Revision approval -->
    <string name="revision">Revision</string>
    <string name="title_activity_revision_detail">Revision Approval</string>
    <string name="parent_category">Parent Category</string>
    <string name="add_field_button">Add Field</string>

</resources>
