<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.freefinder.activities.CategoryDetailActivity"
    tools:showIn="@layout/activity_category_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraintLayout">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_name_label"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/category_name_label"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp">
        </TextView>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/parent_category_label"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/parent_category_label"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/category_name_label">
        </TextView>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/parent_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/category_name">
        </TextView>
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/additional_fields_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_fields_label"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/additional_fields_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_fields_label"
        app:layout_constraintHorizontal_bias="0.0">

        <TableRow>
            <TextView
                android:layout_weight="7"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/table_name_column"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="3"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/table_type_column"
                android:textStyle="bold" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FF000000" />

    </TableLayout>

</android.support.constraint.ConstraintLayout>
