<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.freefinder.activities.AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">

    <ProgressBar
        android:id="@+id/add_place_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <ScrollView
            android:id="@+id/add_place_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/add_place_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TabLayout
                        android:id="@+id/add_place_tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:background="?attr/colorPrimary"
                        android:minHeight="?attr/actionBarSize"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

                        <android.support.design.widget.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basic_info_tab_text"/>

                        <android.support.design.widget.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/additional_info_tab_text"/>

                    </android.support.design.widget.TabLayout>

                </android.support.v4.view.ViewPager>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_place_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_place_button_text" />
                <!--android:layout_marginLeft="32dp"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--android:layout_marginRight="32dp"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--android:layout_marginStart="32dp"-->
                <!--android:layout_marginEnd="32dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/add_place_form" />-->

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
